k8s/cloud/onlyoffice/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: onlyoffice-service
  namespace: cloud
spec:
  selector:
    app: onlyoffice
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
