k8s/cloud/onlyoffice/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: onlyoffice
  namespace: cloud
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-cloudflare
    nginx.ingress.kubernetes.io/proxy-body-size: "10G"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
spec:
  ingressClassName: nginx
  rules:
    - host: onlyoffice.enricoruggieri.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: onlyoffice-service
                port:
                  number: 80
  tls:
    - hosts:
        - onlyoffice.enricoruggieri.com
      secretName: onlyoffice-tls
